[project]
name = "molecule-action"
version = "2.9.3"
description = "GitHub action that allows you to run Molecule to test Ansible role."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Evgenii Vasilenko", email = "gmrnsk@gmail.com" },
]
maintainers = [
    { name = "Evgenii Vasilenko", email = "gmrnsk@gmail.com" },
]
requires-python = ">=3.14"
dependencies = [
    "ansible-lint==26.6.0",
    "molecule==26.6.0",
    "molecule-plugins[docker,podman]",
    "pytest-testinfra",
]

[project.urls]
Repository = "https://github.com/gofrolist/molecule-action"

[tool.uv]
package = false

[tool.semantic_release]
assets = ["action.yml"]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): bump version to v{version} [skip ci]"
build_command = "python update_version.py"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^Merge pull request",
    "^Merge branch",
]
